--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -3,11 +3,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent" android:padding="10dp">
 
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="New Text"
-            android:id="@+id/txtItem" android:textSize="30dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:id="@+id/txtName"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Medium Text"
+            android:id="@+id/txtAddress"/>
 </LinearLayout>
