--- a/res/xml/widgetinfo.xml
+++ b/res/xml/widgetinfo.xml
@@ -4,6 +4,7 @@
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:resizeMode="none"
+       android:updatePeriodMillis="0"
        android:initialLayout="@layout/widget"
        android:widgetCategory="home_screen|keyguard"
        android:previewImage="@drawable/bluetooth_icon"
