--- a/res/layout/widget.xml
+++ b/res/layout/widget.xml
@@ -7,7 +7,7 @@
             style="?android:attr/buttonStyleSmall"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:text="BTButton"
+            android:text="Loading"
             android:id="@+id/button" android:layout_alignParentTop="true" android:layout_alignParentRight="true"
             />
     <ProgressBar
