--- a/res/layout/widget.xml
+++ b/res/layout/widget.xml
@@ -2,7 +2,8 @@
 
 <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
+        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
+        android:padding="5dp">
     <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="fill_parent"
